<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/actmain"
    android:background="#505050"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout   		    	
	    	android:orientation="vertical"	    	
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:baselineAligned="true"
	    	 >
		   
		    <Button
		        android:id="@+id/btnProcess1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process1"
		        android:textSize="40sp"
		        android:textColor="#ffffffff"
		        android:gravity="center"
		        />
		    <Button
		        android:id="@+id/btnProcess2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process2"
		        android:textSize="40sp"
		        android:textColor="#ff808080"
		        android:gravity="center"
		        />
		    <Button
		        android:id="@+id/btnProcess3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process3"
		         android:textSize="40sp"
		        android:textColor="#ff0f0f0f"
		        android:gravity="center"
		        />
		    <Button
		        android:id="@+id/btnProcess4"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process4"
		        android:textSize="40sp"
		        android:textColor="#a0ff0000"
		        android:gravity="center"
		        />
		    <Button
		        android:id="@+id/btnProcess5"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process5"
		        android:textSize="40sp"
		        android:textColor="#a000ff00"
		        android:gravity="center"
		        />
		    <Button
		        android:id="@+id/btnProcess6"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process6"
		        android:textSize="40sp"
		        android:textColor="#a00000ff"
		        android:gravity="center"
		        android:onClick="mOnClick"
		        />
		    <Button
		        android:id="@+id/btnProcess7"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process7"
		        android:textSize="40sp"
		        android:textColor="#a00000ff"
		        android:gravity="center"
		        />
		    <Button
		        android:id="@+id/btnProcess8"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/process8"
		        android:textSize="40sp"
		        android:textColor="#a00000ff"
		        android:gravity="center"		        
		        />
		    <EditText
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="Single Line"
		        android:background="#ffffffff"
		        android:singleLine="true"
		        android:numeric="integer"
		        android:inputType="textPassword"		        	       
		        />
		    <EditText
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="http://"
		        android:scrollHorizontally="true"
		        android:background="#ffffffff"		        
		        android:autoLink="phone"
		        />
	    
	</LinearLayout>
</ScrollView>
<!-- 주석 -->
